--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,9 @@ buildscript {
         maven {
             url uri('./repo')
         }
+        maven {
+            url "https://omooo2333.bintray.com/MethodTrack"
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.2'
@@ -28,6 +31,9 @@ allprojects {
 
         maven {
             url uri('./repo')
+        }
+        maven {
+            url "https://omooo2333.bintray.com/MethodTrack"
         }
     }
 }
