--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -2,13 +2,27 @@ apply plugin: 'java'
 apply plugin: 'groovy'
 apply plugin: 'maven'
 
+sourceSets {
+    main {
+        groovy {
+            srcDirs += 'src/main/groovy'
+        }
+        java {
+            srcDirs += 'src/main/java'
+        }
+        resources {
+            srcDirs += 'src/main/resources'
+        }
+    }
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation gradleApi()
     implementation localGroovy()
 
-    compileOnly 'com.android.tools.build:gradle:3.4.2'
+    compileOnly 'com.android.tools.build:gradle:3.5.0'
 
     implementation 'org.ow2.asm:asm:7.1'
     implementation 'org.ow2.asm:asm-util:7.1'
